  Thanks to Ishan Oshadi Jayawardene for the report.

  Partially address feature request in bug 1688988 by translating
  InterruptedIOExceptions due to timeouts in HTTPClient code to a
  specific TimeoutException. Thanks to Andrew McGuigan for the report.

  Fix bug 1700158 - ShutdownException thrown when using
  grinder.duration. Thanks to Caroline Rioux for the report.

  Update the cookie.py example to show how to send a cookie. Thanks to
  "tz" for prompting me to do this.

  Fix bug 1825639 - "Connection ... already opened" when recording HTTPS.
  Thanks to Peter Zadrozny and Brian Dols for the report.


The Grinder 3.0-beta33
----------------------

  Fulfil Feature Request 1524827 - Mnemonics needed. Requested by
  Travis Bear.

  Fulfil Feature Request 1484448 - Console window size doesn't persist.
  Requested by Travis Bear.

  Fulfil Feature Request 1185967 - Insert comments while capturing with
  the TCPProxy. Patch implemented by Venelin Mitov.

  Really fix bug 1495428 - Plugin thread context not correctly
  registered for events. This bug prevented custom plugins from
  receiving thread lifecycle events but did not affect the HTTP
  plugin. Thanks to Klaus-Peter Berg for reporting that this was still
  broken.

  Fix bug 1638659 - Deadlock in SleeperImplementation. Thanks to
  Bruce Adams for the report.

  Change the console's monitoring of changes to files so that it no
  longer assumes system time matches the file system time. This should
  fix some subtle bugs, particularly for file systems on shared storage.

  Fix bug 1639383 - Extra lines added to Content-Disposition. Previously,
  The Grinder relied on the script maintaining line endings for textual
  POST bodies, in particular multipart/form-data. This was brittle, text
  editors, email, and cross platform transfer frequently alters line
  endings; and I'm sure the Jython interpreter also takes a liberal
  approach where a file has mixed line endings. I've applied a simple